--- a/public/screen.css
+++ b/public/screen.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+
 :root {
   font: 16px / 1 sans-serif;
 }
@@ -9,4 +11,52 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: #538083;
+  color:#453823;
 }
+h1, h2{
+  color:#453823;
+  font-family: 'Shadows Into Light', cursive;;
+  background-color:#F8F4E3;
+  border-radius: 20px;
+  border-style:groove;
+}
+.opening
+{
+  color:#453823;
+  background-color:#538083;
+  background-color:#F8F4E3;
+}
+h3{
+  color:#453823;
+  background-color:#538083; 
+  background-color:#F8F4E3;
+  border-radius: 20px;
+  border-style:groove;
+  font-family: 'Shadows Into Light', cursive;;
+}
+p{
+  shape-outside: circle(50%);
+  background-color:#F8F4E3;
+  border-radius: 15px;
+}
+ul{
+  background-color: #F8F4E3;
+  border-radius: 20px;
+}
+ol{
+  background-color: #F8F4E3;
+  border-radius: 20px;
+}
+div{
+  border-radius: 20px;
+  text-align: center;
+}
+.index2{
+  font-size: 20px;
+  text-align: center;
+}
+
+
+
