Fixed some margins and padding

--- a/public/second.css
+++ b/public/second.css
@@ -1,5 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
 
 :root {
   font: 16px / 1 sans-serif;
@@ -13,6 +15,8 @@ body {
   min-height: 100%;
   background-color: #538083;
   color:#453823;
+  font-family: 'Indie Flower', cursive;
+
 }
 h1, h2{
   font-family: 'Shadows Into Light', cursive;
@@ -30,4 +34,9 @@ ul{
   text-align: center;
   background-color: #F8F4E3;
   border-radius: 20px;
+  margin-bottom: 0px;
+  padding: 10px;
+}
+div{
+  text-align: center;  
 }
