--- a/public/screen.css
+++ b/public/screen.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 :root {
   font: 16px / 1 sans-serif;
@@ -11,7 +12,7 @@ html {
 body {
   margin: 0;
   min-height: 100%;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Indie Flower', cursive;
   background-color: #538083;
   color:#453823;
 }
@@ -21,6 +22,8 @@ h1, h2{
   background-color:#F8F4E3;
   border-radius: 20px;
   border-style:groove;
+  margin-top: 20px;
+  padding: 20px;
 }
 .opening
 {
@@ -35,11 +38,12 @@ h3{
   border-radius: 20px;
   border-style:groove;
   font-family: 'Shadows Into Light', cursive;;
+  padding: 10px;
 }
 p{
   shape-outside: circle(50%);
   background-color:#F8F4E3;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 ul{
   background-color: #F8F4E3;
@@ -50,12 +54,13 @@ ol{
   border-radius: 20px;
 }
 div{
-  border-radius: 20px;
   text-align: center;
 }
 .index2{
   font-size: 20px;
   text-align: center;
+  padding: 10px;
+  margin-bottom: 0px;
 }
 
 
